
2021-10-03  Ron Norman <rjn@inglenet.com>

	* fileio.c: for LS_OPTIONS set defaults when base format is defined

2021-10-02  Ron Norman <rjn@inglenet.com>

	* common.c: Runtime report show 'not set' if that was the default
	* fileio.c: Change default for LS_SPLIT = TRUE
				Check LINE SEQUENTIAL data and if invalid return 09 status

2021-10-01  Ron Norman <rjn@inglenet.com>

	* coblocal.h: Removed the cob_mf_ls_xxx fields
				replaced cob_gc_files/cob_mf_files with cob_file_format
	* common.c: Changes related to removal of COB_MF_LS_xxx from runtime.cfg
	* fileio.c: Changes related to removal of COB_MF_LS_xxx from runtime.cfg

2021-10-01  Simon Sobisch <simonsobisch@gnu.org>

	* fextfh.c: merged EXTFH changes from 3.x (fileio.c)

2021-09-30  Simon Sobisch <simonsobisch@gnu.org>

	* common.c: save-guard against broken cob_module chain in dump
	* termio.c, common.c: allow to explicit disable dump

2021-09-30  Ron Norman <rjn@inglenet.com>

	* common.h: COB_MAX_KEYCOMP increased to 16
	* fileio.h: config.h is only included if not already
	* fisam.c: (COB_MAX_KEYCOMP) is compared to actual limit in
			the ISAM libray and may reduce to what is allowed

2021-09-29  Simon Sobisch <simonsobisch@gnu.org>

	* fileio.c (EXTFH3): also handle OP_FLUSH, OP_DELETE_FILE, OP_COMMIT and
	  OP_ROLLBACK before checking record-pointer;
	  set file status 9/100 for unknown op-codes
	* common.c (cob_external_addr): split into muliple functions
	* fileio.c (cob_file_malloc): set the file's number of keys directly
	* fileio.c (cob_file_external_addr): change the way the file is allocated,
	  having only its POINTER be "external" and use cob_file_malloc to allocate
	  and set the attributes

2021-09-27  Simon Sobisch <simonsobisch@gnu.org>

	* common.c (call_exit_handlers_and_terminate): extracted from
	  (cob_stop_run, cob_tidy)
	* reportio.c (cob_report_generate): backport of 2021-09-26 change
	* common.c (cob_gettmpdir): fix to remove trailing slash
